--- a/HtmlHelpFiles/Bolum12.html
+++ b/HtmlHelpFiles/Bolum12.html
@@ -202,7 +202,7 @@
 </figure>
 <p><strong>Resim 12.5:</strong> Örnek 4 kod çıktısı</p>
 <p>Python’da dosyalara yazılan veriler string (metin) türünde kaydedilmektedir. Dosya erişim örneklerini öğrendikten sonra programlamada temel algoritmalar olarak kabul edilen arama ve sıralama algoritmalarını kullanarak dosya işlemleri yapılabilir.</p>
-<p>##12.4. Arama ve Sıralama Algoritmaları ile Dosyadan Okuma ve Dosyaya Yazma</p>
+<h2 id="arama-ve-sıralama-algoritmaları-ile-dosyadan-okuma-ve-dosyaya-yazma" >12.4. Arama ve Sıralama Algoritmaları ile Dosyadan Okuma ve Dosyaya Yazma</h2>
 <p>İlk örnek şifreleme (kriptoloji) ve şifre çözme biliminde önemli bir yeri olan asal sayı örneği olacaktır. Çok büyük sayıların asal olup olmadığının kontrolü için bilgisayara hesaplatmak yerine kayıtlı olan bir listeden bakmak daha kolay bir yöntemdir. Bu nedenle bunun bilgisayarı yormayacak uzunlukta bir örneği yapılacaktır. Birinci aşamada birden bine kadar olan asal sayılar hesaplanıp asal.txt isimli dosyaya kaydedilecektir. Diğer bir değişle dosya yazma kipinde açılacaktır. Bu durumda yapılacak olan işlem asal sayıların hesaplanıp dosyaya kaydedilmesi olacaktır. Asal sayı örneği döngüler konusunda anlatıldığından ek bir açıklamaya gerek duyulmamıştır. Dosya açma kipi: yazma kipi olacak. Asal sayılar bulunduktan sonra string türüne dönüştürülmüştür. Sayılar arasına bir boşluk bırakılmıştır. Böylece Örnek 6’da dosyadan asal sayılar okunduktan sonra split metodu ile sayıları liste veri tipinde tutulması sağlanmış olacaktır. Aynı mantık virgül gibi başka bir karakter kullanılarak yapılabilir.</p>
 <p><strong>Örnek 5</strong></p>
 <p><strong>1’den 1000’e kadar olan asal sayıları bulup dosyaya kaydeden program.</strong></p>
